formatowanie przy generowaniu sie wywalilo xd
