# src/app/services/models.ts
@@ -18,6 +18,8 @@ export { DeleteProductRequest } from './models/delete-product-request';
 export { Filter } from './models/filter';
 export { GetAllCompaniesResponse } from './models/get-all-companies-response';
 export { GetCompanyDetailsResponse } from './models/get-company-details-response';
+export { GetOrdersConfigRequest } from './models/get-orders-config-request';
+export { GetOrdersConfigResponse } from './models/get-orders-config-response';
 export { GetOrdersForCompanyRequest } from './models/get-orders-for-company-request';
 export { GetStatisticsChartRequest } from './models/get-statistics-chart-request';
 export { GetStatisticsChartResponse } from './models/get-statistics-chart-response';
@@ -31,6 +33,7 @@ export { OpenHours } from './models/open-hours';
 export { OrderDto } from './models/order-dto';
 export { OrderProductDto } from './models/order-product-dto';
 export { OrdersPagedResult } from './models/orders-paged-result';
+export { OrderStatusModel } from './models/order-status-model';
 export { PagedOrdersResponse } from './models/paged-orders-response';
 export { ProductDto } from './models/product-dto';
 export { RegisterRequest } from './models/register-request';
