# src/app/services/models/get-orders-config-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface GetOrdersConfigRequest {
+  companyId?: string;
+}
