# src/app/services/models/get-orders-config-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+import { OrderStatusModel } from '../models/order-status-model';
+export interface GetOrdersConfigResponse {
+
+  /**
+   * List of status models
+   */
+  orderStatusModels: Array<OrderStatusModel>;
+}
